# PrePostChatBot

./: .env  .gitignore  Dockerfile  main.py  pyproject.toml
entities/: dbconnection.py  ensureUserExists.py  entities.py  getLatestGame.py
helpers/: create_teams.py  messenger.py  shared.py
middleware/: handlers.py  router.py
